# gitid

./: Cargo.toml  README.md
.github/workflows/: release.yml  update-homebrew-tap.yml
src/: cli.rs  config.rs  detect.rs  git.rs  main.rs  profile.rs  prompt.rs  ssh.rs  ssh_keys.rs
src/auth/: github.rs  gitlab.rs  mod.rs
